fixing layout of scrollbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,7 +6,7 @@
 }
 
 .app-main {
-  padding-top: var(--toolbar-height);
+  margin-top: var(--toolbar-height);
 }
 
 
